--- a/client/src/components/displayInfo.css
+++ b/client/src/components/displayInfo.css
@@ -1,16 +1,34 @@
 .info_disp {
   display: flex;
   justify-content: space-around;
-  background-color: rgb(238, 238, 253);
   border-radius: 7px;
   padding: 1rem 0;
-  width: 90%;
+  width: 95%;
   margin: auto;
-  transition: all 0.4s ease;
+  gap: 0.5rem;
+  font-size: 0.9rem;
 }
-.info_disp:nth-child(odd) {
-  background-color: rgb(250, 250, 255);
+.info_disp:nth-child(even) {
+  background-color: #e5e7eb;
 }
-.info_disp:hover {
-  background-color: rgb(219, 219, 255);
+.info_disp span {
+  min-width: 0 !important;
+  width: 100px;
+  word-wrap: break-word;
+}
+.title span {
+  min-width: 0 !important;
+  width: 100px;
+  word-wrap: break-word;
+}
+@media screen and (max-width: 600px) {
+  .info_disp {
+    width: 99%;
+  }
+  .info_disp span {
+    font-size: 0.8rem;
+  }
+  .title {
+    font-size: 0.8rem;
+  }
 }
